Chau update Hoat complete 15h55 11/01

--- a/sprint2-frontend/src/app/app-employee/member-card/member-card-create/member-card-create.component.html
+++ b/sprint2-frontend/src/app/app-employee/member-card/member-card-create/member-card-create.component.html
@@ -109,7 +109,7 @@
           <mat-label>Chọn vị trí</mat-label>
           <mat-select formControlName="slotNumber">
             <mat-option *ngFor="let par of parkingSlotList" [value]="par.id">
-              {{par.slotNumber}}
+                {{par.floor}} - {{par.slotNumber}}
             </mat-option>
           </mat-select>
         </mat-form-field>
