--- a/sprint2-frontend/src/app/app-customer/customer-pay/pay/pay.component.html
+++ b/sprint2-frontend/src/app/app-customer/customer-pay/pay/pay.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid pt-2 pb-3">
   <div class="row" *ngIf="memberCardList.length != 0">
     <div class="container-xl">
       <div class="table-responsive">
