--- a/sprint2-frontend/src/app/authentication/component/sign-up/sign-up.component.html
+++ b/sprint2-frontend/src/app/authentication/component/sign-up/sign-up.component.html
@@ -107,7 +107,7 @@
               <button type="submit" class=" rounded btn btn-danger mr-3">
                 Đăng ký
               </button>
-              <button type="button" class="rounded btn btn-dark " [routerLink]="['/login']">
+              <button type="button" class="rounded btn btn-dark " [routerLink]="['/home-page/login']">
                 Quay lại
               </button>
             </div>
