--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -2,7 +2,7 @@
 	<div class="card">
 		<div class="card-header">
 			<h2 class="mb-0">
-				<a [routerLink]="['/authentication/home-page']">
+				<a [routerLink]="['home-page/info']">
 					<span><i class="fa fa-home"></i> Trang chủ</span>
 				</a>
 			</h2>
@@ -82,5 +82,4 @@
 			</h2>
 		</div>
 	</div>
-
 </div>
