--- a/sprint2-frontend/src/app/app.component.html
+++ b/sprint2-frontend/src/app/app.component.html
@@ -1,14 +1,15 @@
-<!--<app-nav-bar></app-nav-bar>-->
-<!--<div class="container-fluid mt-4">-->
-<!--	<div class="row">-->
-<!--		<div class="col-lg-3 mx-auto">-->
-<!--			<app-side-bar></app-side-bar>-->
-<!--		</div>-->
-<!--		<div class="col-lg-9 mx-auto">-->
-<!--      <router-outlet></router-outlet>-->
-<!--		</div>-->
-<!--	</div>-->
-<!--</div>-->
-<!--<app-footer></app-footer>-->
 
-<router-outlet></router-outlet>
+<app-nav-bar></app-nav-bar>
+  <div class="container-fluid mt-4">
+    <div class="row">
+      <div class="col-lg-3 mx-auto">
+        <app-side-bar></app-side-bar>
+      </div>
+      <div class="col-lg-9 mx-auto">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
+<app-footer></app-footer>
+
+
