--- a/sprint2-frontend/src/app/authentication/component/login/login.component.html
+++ b/sprint2-frontend/src/app/authentication/component/login/login.component.html
@@ -49,12 +49,17 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6 d-flex justify-content-center">
               <div class="row">
-                <button type="submit" (click)="onSubmit()" class=" rounded btn btn-danger ">
-                  Đăng nhập
-                </button>
-                <button type="reset" (click)="resetInput()" class="  rounded btn btn-dark ml-3">
-                  Nhập Lại
-                </button>
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6 d-flex justify-content-center">
+                  <button type="submit"  (click)="onSubmit()" class=" rounded btn btn-danger ">
+                    Đăng nhập
+                  </button>
+                  <button type="reset" (click)="resetInput()" class="  rounded btn btn-dark ml-3">
+                    Nhập Lại
+                  </button>
+                </div>
+                <div class="col-lg-3"></div>
+
               </div>
             </div>
             <div class="col-lg-3"></div>
@@ -64,7 +69,7 @@
               <a (click)="reset()" style="color: blue">Quên mật khẩu?</a>
             </div>
             <div class="col-lg-6 d-flex justify-content-center">
-              <a [routerLink]="['/sign-up']">Tạo tài khoản mới?</a>
+              <a [routerLink]="['/home-page/sign-up']">Tạo tài khoản mới?</a>
             </div>
           </div>
           <div class="row mt-1">
