quan fix park new car registered

--- a/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
+++ b/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
@@ -111,7 +111,7 @@
           <div class="col">
             <mat-form-field class="example-full-width">
               <mat-label>Ngày bắt đầu</mat-label>
-              <input matInput formControlName="startDate">
+              <input matInput type="datetime-local" formControlName="startDate">
             </mat-form-field>
           </div>
         </div>
@@ -129,7 +129,7 @@
           <div class="col">
             <mat-form-field class="example-full-width">
               <mat-label>Ngày kết thúc</mat-label>
-              <input matInput formControlName="endDate">
+              <input matInput type="datetime-local" formControlName="endDate">
             </mat-form-field>
           </div>
         </div>
