quan fix all test case

--- a/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
+++ b/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
@@ -41,7 +41,9 @@
         <mat-form-field class="example-full-width">
           <mat-label>Biển số xe</mat-label>
           <input matInput formControlName="plateNumber">
-          <mat-error *ngIf="ticketForm.get('plateNumber').hasError('required')">Vui lòng nhập biển số</mat-error>
+          <mat-error *ngIf="ticketForm.get('plateNumber').hasError('required') ||
+          ticketForm.get('plateNumber').hasError('whitespace')">Vui lòng nhập biển số
+          </mat-error>
           <mat-error *ngIf="ticketForm.get('plateNumber').hasError('maxlength')">Biển số xe không quá 10 kí tự
           </mat-error>
         </mat-form-field>
