--- a/sprint2-frontend/src/app/app-customer/customer-pay/successfully-pay/successfully-pay.component.html
+++ b/sprint2-frontend/src/app/app-customer/customer-pay/successfully-pay/successfully-pay.component.html
@@ -5,7 +5,7 @@
   <p>Cảm ơn quý khách đã sử dụng dịch vụ của chúng tôi!</p>
 </div>
 <div *ngIf="message == 'failed'">
-  <p>Đã có lỗi xảy ra.</p>
+  <p class="warning">Đã có lỗi xảy ra.</p>
   <p>Quý khách vui lòng liên hệ nhân viên để khắc phục sự cố. Mong quý khách thông cảm! Xin cảm ơn!</p>
 </div>
 <br>
