--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -85,7 +85,7 @@
   <div class="card">
     <div class="card-header" >
       <h2 class="mb-0">
-        <a routerLink="/customer/carList">
+        <a [routerLink]="['/customer/pay/15']">
           <span><i class="fa fa-bar-chart"></i> Danh sách xe cá nhân</span>
         </a>
       </h2>
