--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-overview/statistic-overview.component.css
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-overview/statistic-overview.component.css
@@ -26,7 +26,7 @@
 .statistics .pcx {
   font-weight: bolder;
   font-size: 15px;
-  color: #435d7d;
+  color: white;
   margin-right: 24px;
   outline: none;
   border: none;
@@ -43,6 +43,10 @@
   background-image: url("https://www.ubudu.com/wp-content/uploads/2016/10/parking.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+div.statistics.p-2.mx-auto {
+  background-color: #47475c
 }
 
 @media (max-width: 1200px) {
