--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-sales/statistic-sales.component.html
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-sales/statistic-sales.component.html
@@ -1,63 +1,64 @@
 <div class="statistics-overview">
-  <div class="statistics p-2 mx-auto bg-light">
+  <div class="statistics p-2 mx-auto">
     <button class="pcx" routerLink="/admin/statistic-overview">Tổng hợp</button>
     <button class="pcx" routerLink="/admin/statistic-ticket">Thống kê vé</button>
     <button class="pcx" routerLink="/admin/statistic-revenue">Thống kê doanh thu</button>
     <button class="pcx" routerLink="/admin/statistic-customer-register">Thống kê số lượng khách hàng</button>
   </div>
-  <form [formGroup]="formStatisticRevenuePeriod" (ngSubmit)="openStatisticRevenuePeriod()">
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12">
+  <div class="statistics bg-light">
+    <form [formGroup]="formStatisticRevenuePeriod" (ngSubmit)="openStatisticRevenuePeriod()">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 mt-2 ml-3 mb-3">
 
-        <mat-form-field color="accent" appearance="fill" class="mr-2">
-          <mat-label>Ngày bắt đầu (*)</mat-label>
-          <input matInput [matDatepicker]="picker1" formControlName="fromDayPayment">
-          <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-          <mat-datepicker #picker1></mat-datepicker>
-          <mat-error *ngIf="formStatisticRevenuePeriod.controls.fromDayPayment.errors?.required">
-            Không được để trống
-          </mat-error>
-        </mat-form-field>
+          <mat-form-field class="mr-2">
+            <mat-label>Thống kê (*)</mat-label>
+            <mat-select formControlName="typeReport">
+              <mat-option *ngFor="let value of typeReports" [value]="value.value">
+                {{value.valueView}}
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="formStatisticRevenuePeriod.controls.typeReport.errors?.required">
+              Không được để trống
+            </mat-error>
+          </mat-form-field>
 
-        <mat-form-field color="accent" appearance="fill" class="mr-2">
-          <mat-label>Ngày kết thúc (*)</mat-label>
-          <input matInput [matDatepicker]="picker2" formControlName="toDayPayment">
-          <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-          <mat-datepicker #picker2 color="primary"></mat-datepicker>
-          <mat-error *ngIf="formStatisticRevenuePeriod.controls.toDayPayment.errors?.required">
-            Không được để trống
-          </mat-error>
-        </mat-form-field>
+          <mat-form-field color="accent" class="mr-2">
+            <mat-label>Ngày bắt đầu (*)</mat-label>
+            <input matInput [matDatepicker]="picker1" formControlName="fromDayPayment">
+            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+            <mat-datepicker #picker1></mat-datepicker>
+            <mat-error *ngIf="formStatisticRevenuePeriod.controls.fromDayPayment.errors?.required">
+              Không được để trống
+            </mat-error>
+          </mat-form-field>
 
-        <mat-form-field appearance="fill">
-          <mat-label>Thống kê</mat-label>
-          <mat-select formControlName="typeReport">
-            <mat-option *ngFor="let value of typeReports" [value]="value.value">
-              {{value.valueView}}
-            </mat-option>
-          </mat-select>
-          <mat-error *ngIf="formStatisticRevenuePeriod.controls.typeReport.errors?.required">
-            Không được để trống
-          </mat-error>
-        </mat-form-field>
+          <mat-form-field color="accent">
+            <mat-label>Ngày kết thúc (*)</mat-label>
+            <input matInput [matDatepicker]="picker2" formControlName="toDayPayment">
+            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+            <mat-datepicker #picker2 color="primary"></mat-datepicker>
+            <mat-error *ngIf="formStatisticRevenuePeriod.controls.toDayPayment.errors?.required">
+              Không được để trống
+            </mat-error>
+          </mat-form-field>
 
-        <button type="submit" class="btn btn-primary mr-2" style="margin-left: 150px">Xem thống kê</button>
+          <button type="submit" class="btn btn-secondary">Xem thống kê</button>
+        </div>
       </div>
-      <p style="color: red; font-weight: bolder; margin-left: 20px">{{message}}</p>
-    </div>
+    </form>
+  </div>
 
-
-  </form>
-
-</div>
-<div class="statistics mr-0 bg-light ">
-  <div class=" row container-fluid p-0 m-0">
-    <div *ngIf="typeReport ==='reMemberCard'">
-      <div id="statistic-revenue-member-card"
-           style="position: relative; height:60vh; width:73vw"></div>
-    </div>
-    <div *ngIf="typeReport ==='reTicket'">
-      <div id="statistic-revenue-ticket" style="position: relative; height:60vh; width:73vw"></div>
+  <div class="mr-0 ">
+    <div class=" row container-fluid p-0 m-0">
+      <div *ngIf="typeReport ==='reMemberCard'">
+        <div id="statistic-revenue-member-card"
+             style="position: relative; height:60vh; width:73vw"></div>
+      </div>
+      <div *ngIf="typeReport ==='reTicket'">
+        <div id="statistic-revenue-ticket" style="position: relative; height:60vh; width:73vw"></div>
+      </div>
     </div>
   </div>
 </div>
+
+
