--- a/sprint2-frontend/src/app/app-customer/update-customer/update-customer.component.html
+++ b/sprint2-frontend/src/app/app-customer/update-customer/update-customer.component.html
@@ -20,9 +20,9 @@
         <form class="col-lg-12" [formGroup]="customer" (submit)="update()"  appFocusInvalidInput>
           <h2 class="font-weight-bold text-center">Chỉnh sửa thông tin tài khoản</h2>
           <div class="row mb-3">
-            <mat-form-field class="col-lg-12">
+            <mat-form-field class="col-lg-12 mb-2">
               <mat-label class="font-weight-bold col-form-label">Họ và tên</mat-label>
-              <input matInput class="form-control" required formControlName="fullName" name="a">
+              <input matInput class="form-control" required formControlName="fullName" #input>
               <mat-error
                 *ngIf="customer.get('fullName').hasError('required')">
                 Họ và tên không được để trống
@@ -42,7 +42,7 @@
             </mat-form-field>
           </div>
           <div class="row mb-3">
-            <mat-form-field class="col-lg-6 datepicker">
+            <mat-form-field class="col-lg-6 datepicker mb-2">
               <mat-label>Ngày sinh</mat-label>
               <input matInput [max]="maxBirthdayOfHuman" [matDatepicker]="picker" formControlName="birthday" required>
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -56,7 +56,7 @@
                 Bạn chưa đủ 18 tuổi
               </mat-error>
             </mat-form-field>
-            <mat-form-field class="col-lg-6">
+            <mat-form-field class="col-lg-6 mb-2">
               <mat-label>Giới tính</mat-label>
               <mat-select formControlName="gender">
                 <mat-option [value]=true>Nam</mat-option>
@@ -65,7 +65,7 @@
             </mat-form-field>
           </div>
           <div class="row mb-3">
-            <mat-form-field class="col-lg-6">
+            <mat-form-field class="col-lg-6 mb-2">
               <mat-label>CMND</mat-label>
               <input matInput formControlName="identityNumber" required name="c">
               <mat-error *ngIf="customer.get('identityNumber').hasError('required')">
@@ -75,7 +75,7 @@
                 CMND là chữ số và có 9 hoặc 12 số
               </mat-error>
             </mat-form-field>
-            <mat-form-field class="col-lg-6">
+            <mat-form-field class="col-lg-6 mb-2">
               <mat-label>Số điện thoại</mat-label>
               <input matInput formControlName="phone" required>
               <mat-error
@@ -84,12 +84,12 @@
               </mat-error>
               <mat-error
                 *ngIf="customer.get('phone').hasError('pattern')">
-                Số điện thoại có định dạng là +(84)9xxxxxxxx hoặc 09xxxxxxxx
+                Số điện thoại có định dạng là +(84)xxxxxxxxx hoặc 0xxxxxxxxx
               </mat-error>
             </mat-form-field>
           </div>
           <div class="row mb-3">
-            <mat-form-field class="col-lg-6">
+            <mat-form-field class="col-lg-6 mb-2">
               <mat-label>Email</mat-label>
               <input matInput formControlName="email">
               <mat-error
@@ -97,7 +97,7 @@
                 Email không đúng định dạng abc@abc.abc
               </mat-error>
             </mat-form-field>
-            <mat-form-field class="col-lg-6">
+            <mat-form-field class="col-lg-6 mb-2">
               <mat-label>Địa chỉ</mat-label>
               <input matInput formControlName="address" required>
               <mat-error *ngIf="customer.get('address').hasError('required')">
