--- a/sprint2-frontend/src/app/app-admin/employee-management/employee-view/employee-view.component.html
+++ b/sprint2-frontend/src/app/app-admin/employee-management/employee-view/employee-view.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid ">
 
 
-    <h3 class="row d-flex justify-content-center">Xem thông tin nhân viên </h3>
+    <h3 class="row d-flex justify-content-center">Xem thông tin nhân viên</h3>
     <hr>
 
     <div class="form-group row ">
@@ -53,7 +53,7 @@
 
     <div class="row d-flex justify-content-center ml-4">
       <div>
-        <button class="btn btn-secondary btn btn-sm" style="width: 80px" [mat-dialog-close]="">Hủy</button>
+        <button class="btn btn-secondary btn btn-sm" style="width: 80px" [mat-dialog-close]="">Đóng</button>
       </div>
     </div>
 </div>
