--- a/sprint2-frontend/src/app/authentication/component/reset-password/reset-password.component.html
+++ b/sprint2-frontend/src/app/authentication/component/reset-password/reset-password.component.html
@@ -20,10 +20,10 @@
         </div>
 <!--        <button type="submit" class="btn btn-primary btn-block">Gửi email đặt lại mật khẩu</button>-->
         <div class="col-lg-12 d-flex justify-content-center">
-          <button type="submit" class=" rounded btn btn-danger mr-3">
+          <button type="submit" class=" rounded btn btn-primary mr-3">
             Gửi email đặt lại mật khẩu
           </button>
-          <button type="button" class="rounded btn btn-dark " matDialogClose="">
+          <button type="button" class="rounded btn btn-primary " matDialogClose="">
            Hủy
           </button>
         </div>
