--- a/sprint2-frontend/src/app/authentication/component/login/login.component.html
+++ b/sprint2-frontend/src/app/authentication/component/login/login.component.html
@@ -11,16 +11,23 @@
           </div>
           <div class="row input-group  mx-auto mt-2  ">
             <div class="input-group-prepend">
-              <span class="input-group-text">&nbsp;<i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;</span>
+              <span class="input-group-text"><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;&nbsp;</span>
             </div>
             <input type="text" class="form-control" formControlName="username"
-                   placeholder="Tài khoản" style="height: 45px">
+                   placeholder="Email" style="height: 45px">
           </div>
           <div class="row d-flex justify-content-center ">
             <p *ngIf="loginForm.controls.username.errors?.required &&
               loginForm.controls.username.touched"
                class="text-danger">
-              Vui lòng nhập tên tên khoản và không để trống
+              Nhập Email không được để trống.
+            </p>
+          </div>
+          <div class="row d-flex justify-content-center mt-1">
+            <p *ngIf="loginForm.controls.username.errors?.pattern &&
+              loginForm.controls.username.touched"
+               class="text-danger">
+              Nhập đúng định dạng email
             </p>
           </div>
           <div class="row input-group mx-auto mt-3 ">
@@ -30,14 +37,14 @@
             <input type="password" formControlName="password" class="form-control"
                    placeholder="Mật Khẩu" style="height: 45px">
           </div>
-          <div class="row d-flex justify-content-center mt-1">
+          <div class="row d-flex justify-content-center mt-2  ">
             <p *ngIf="loginForm.controls.password.errors?.required &&
               loginForm.controls.password.touched"
                class="text-danger">
-              Vui lòng nhập mật khẩu và không để trống
+               Nhập mật khẩu không để trống.
             </p>
           </div>
-          <div class="row d-flex justify-content-center mt-1">
+          <div class="row d-flex justify-content-center mt-2">
             <p *ngIf="loginForm.controls.password.errors?.pattern &&
               loginForm.controls.password.touched"
                class="text-danger">
@@ -45,56 +52,45 @@
             </p>
           </div>
 
-          <div class="row mt-3">
-            <div class="col-lg-3"></div>
-            <div class="col-lg-6 d-flex justify-content-center">
-              <div class="row">
-                <div class="col-lg-3"></div>
-                <div class="col-lg-6 d-flex justify-content-center">
-                  <button type="submit"  (click)="onSubmit()" class=" rounded btn btn-danger ">
+          <div class="row mt-3 d-flex justify-content-center">
+                  <button type="submit"  (click)="onSubmit()" class="  btn btn-danger ">
                     Đăng nhập
                   </button>
-                  <button type="reset" (click)="resetInput()" class="  rounded btn btn-dark ml-3">
-                    Nhập Lại
+                  <button type="reset" (click)="resetInput()" class=" btn btn-primary ml-3">
+                    Hủy
                   </button>
-                </div>
-                <div class="col-lg-3"></div>
-
-              </div>
-            </div>
-            <div class="col-lg-3"></div>
           </div>
-          <div class="row mt-3">
-            <div class="col-lg-6 d-flex justify-content-center">
+          <div class=" mt-3">
+            <div class="row d-flex justify-content-center">
               <a (click)="reset()" style="color: blue">Quên mật khẩu?</a>
             </div>
-            <div class="col-lg-6 d-flex justify-content-center">
+            <div class="row d-flex justify-content-center mt-2">
               <a [routerLink]="['/home-page/sign-up']">Tạo tài khoản mới?</a>
             </div>
           </div>
-          <div class="row mt-1">
-            <div class="col-lg-4">
-              <hr>
-            </div>
-            <div class="col-lg-4 d-flex justify-content-center">Hoặc</div>
-            <div class="col-lg-4">
-              <hr>
-            </div>
-          </div>
-          <div class="row my-2">
-            <div class="col-lg-12 ">
-              <div class="row mt-2 d-flex justify-content-center">
-                <button type="button" class="fb btn rounded" (click)="signInWithFB()">
-                  <i class="fa fa-facebook fa-fw w-auto"></i> Đăng nhập bằng Facebook
-                </button>
-              </div>
-              <div class="row mt-2 d-flex justify-content-center">
-                <button class="google btn rounded " (click)="signInWithGoogle()">
-                  <i class="fa fa-google fa-fw"></i>Đăng nhập bằng Google+
-                </button>
-              </div>
-            </div>
-          </div>
+<!--          <div class="row mt-1">-->
+<!--            <div class="col-lg-4">-->
+<!--              <hr>-->
+<!--            </div>-->
+<!--            <div class="col-lg-4 d-flex justify-content-center">Hoặc</div>-->
+<!--            <div class="col-lg-4">-->
+<!--              <hr>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="row my-2">-->
+<!--            <div class="col-lg-12 ">-->
+<!--              <div class="row mt-1 d-flex justify-content-center">-->
+<!--                <button type="button" class="fb btn rounded" (click)="signInWithFB()">-->
+<!--                  <i class="fa fa-facebook fa-fw w-auto"></i> Đăng nhập bằng Facebook-->
+<!--                </button>-->
+<!--              </div>-->
+<!--              <div class="row mt-1 d-flex justify-content-center">-->
+<!--                <button class="google btn rounded " (click)="signInWithGoogle()">-->
+<!--                  <i class="fa fa-google fa-fw"></i>Đăng nhập bằng Google+-->
+<!--                </button>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
         </form>
       </div>
       <div class="col-lg-4 container-fluid"></div>
