QUOC MERTCH NGÀY 12-1

--- a/sprint2-frontend/src/app/app-admin/parking-slot/edit-parking-slot/edit-parking-slot.component.css
+++ b/sprint2-frontend/src/app/app-admin/parking-slot/edit-parking-slot/edit-parking-slot.component.css
@@ -89,3 +89,19 @@ body {
 .signup-form form a:hover{
   text-decoration: underline;
 }
+#input-floor{
+  width: 80px;
+  text-align: right;
+}
+#input-height{
+  width: 80px;
+  text-align: right;
+}
+#input-width{
+  width: 80px;
+  text-align: right;
+}
+#slot-number{
+  width: 80px;
+  text-align: right;
+}
