--- a/sprint2-frontend/src/app/app-admin/parking-slot/detail-parking-slot/detail-parking-slot.component.html
+++ b/sprint2-frontend/src/app/app-admin/parking-slot/detail-parking-slot/detail-parking-slot.component.html
@@ -5,7 +5,7 @@
     <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 " style="padding-right: 0px">
       <label>Vị trí đỗ </label>
     </div>
-    <div class="col-8 col-sm-8 col-md-8 col-lg-8 col-xl-8 " style="padding-left: 0px">
+    <div class="col-8 col-sm-8 col-md-8 col-lg-8 col-xl-8 " style="padding-left: 0px;text-align: right">
       <label class="form-control">{{ele.slotNumber}}</label>
     </div>
   </div>
@@ -14,7 +14,7 @@
       <label>Vị trí </label>
     </div>
     <div class="col-7 col-sm-7 col-md-7 col-lg-7 col-xl-7 "
-         style="text-align: left;padding-left: 0px">
+         style="text-align: right;padding-left: 0px">
       <label class="form-control ">{{ele.floor}}</label>
     </div>
   </div>
