--- a/sprint2-frontend/src/app/app-admin/parking-slot/list-parking-slot/list-parking-slot.component.html
+++ b/sprint2-frontend/src/app/app-admin/parking-slot/list-parking-slot/list-parking-slot.component.html
@@ -43,7 +43,7 @@
           </div>
         </div>
       </div>
-      <table class="table table-striped table-hover">
+      <table class="table table-striped table-hover" style="min-height: 400px">
         <thead>
         <tr>
           <th>STT</th>
