--- a/sprint2-frontend/src/app/app-customer/customer-pay/pay/pay.component.css
+++ b/sprint2-frontend/src/app/app-customer/customer-pay/pay/pay.component.css
@@ -233,14 +233,13 @@
 }
 
 .table-responsive {
-  margin: 30px 0;
+  margin: 20px 0;
 }
 
 .table-wrapper {
   background: #fff;
   padding: 20px 25px;
   border-radius: 3px;
-  min-width: 1000px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 }
 
@@ -330,21 +329,21 @@ table.table td i {
 
 .choose {
   color: blue;
-  margin: -10% 0 0 0;
+  margin: 0 0 0 0;
 }
 
 .momo {
-  width: 75%;
-  margin: 1% 0 5% 7.9%;
+  width: 65.3%;
+  margin: 3.9% 0 5% 7.9%;
 }
 
 .paypalIcon {
-  width: 96.5%;
+  width: 93%;
   margin: 0 0 0 9.6%;
 }
 
 .paypal {
-  width: 75%;
+  width: 65%;
   margin: 0 0 0 8%;
 }
 
