--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -86,7 +86,7 @@
     <div class="card-header" >
       <h2 class="mb-0">
         <a routerLink="/customer/changePassword">
-          <span><i class="fa fa-bar-chart"></i> Đổi mật khẩu</span>
+          <span><i class="fa fa-key" aria-hidden="true"></i> Đổi mật khẩu</span>
         </a>
       </h2>
     </div>
@@ -95,7 +95,7 @@
     <div class="card-header" >
       <h2 class="mb-0">
         <a [routerLink]="['/customer/pay']">
-          <span><i class="fa fa-bar-chart"></i> Danh sách xe cá nhân</span>
+          <span><i class="fa fa-list" aria-hidden="true"></i> Danh sách xe cá nhân</span>
         </a>
       </h2>
     </div>
@@ -104,7 +104,7 @@
     <div class="card-header" >
       <h2 class="mb-0">
         <a routerLink="/customer/historyPayment">
-          <span><i class="fa fa-bar-chart"></i> Lịch sử thanh toán</span>
+          <span><i class="fa fa-cc-discover" aria-hidden="true"></i> Lịch sử thanh toán</span>
         </a>
       </h2>
     </div>
